added 7 new commands